Correcting arrow cutoff issue and alignment.

--- a/less/styles.less
+++ b/less/styles.less
@@ -452,12 +452,9 @@ main {
                 font-family: dekar_lightregular;
             }
         }
-        .image_slider {
-            height: 67.47%;
-        }
         
         .image_slider {
-            height: 67.47%;
+            height: 68%;
             
             img {
                 width:100%;
